--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <script src="./bootstrap.js"></script>
+    <canvas id="canvas" height="150" width="150"></canvas>
   </body>
 </html>
